Style: 전반적인 코드 스타일 개선