@@ -6,20 +6,20 @@ import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.test.context.support.WithSecurityContextFactory;
 
-import java.util.Arrays;
+import java.util.List;
 
-public class WithMockCustomUserSecurityContextFactory implements WithSecurityContextFactory<WithMockCustomUser> {
+public class WithMockCustomUserSecurityContextFactory
+    implements WithSecurityContextFactory<WithMockCustomUser> {
     @Override
     public SecurityContext createSecurityContext(WithMockCustomUser annotation) {
 
         final SecurityContext securityContext = SecurityContextHolder.createEmptyContext();
 
         final UsernamePasswordAuthenticationToken authenticationToken
-            = new UsernamePasswordAuthenticationToken(annotation.username(),
-            "", Arrays.asList(new SimpleGrantedAuthority(annotation.grade())));
+            = new UsernamePasswordAuthenticationToken(
+            annotation.username(), "", List.of(new SimpleGrantedAuthority(annotation.grade())));
 
         securityContext.setAuthentication(authenticationToken);
         return securityContext;
     }
-
 }
